# score_rust_policies

./: BUILD.bazel  MODULE.bazel  README.md
.github/ISSUE_TEMPLATE/: bug_fix.md  improvement.md
.github/workflows/: tests.yml
clippy/: BUILD.bazel  linters.bzl
clippy/relaxed/: clippy.toml
clippy/strict/: BUILD.bazel  clippy.toml
rustfmt/: rustfmt.toml
tests/: .bazelrc  BUILD.bazel  MODULE.bazel
tests/src/: lib.rs
