# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library")

rust_library(
    name = "sample",
    srcs = ["src/lib.rs"],
    edition = "2021",
)

# Runs Clippy using the strict ASIL-B policy.
rust_clippy(
    name = "sample_clippy",
    deps = [":sample"],
    tags = ["manual"],
    testonly = True,
    visibility = ["//visibility:public"],
)

