# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_rust_policies_tests",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "score_rust_policies", version = "0.0.1")

local_path_override(
    module_name = "score_rust_policies",
    path = "..",
)


rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)
